--- a/html/data/body_content.html
+++ b/html/data/body_content.html
@@ -17,15 +17,15 @@
 		<div class="map-tab_panels">
 			<div class="container">
 				<ul>
-					<li data-panel="lives_improved" class="datafilter active-tab" onclick="objDataFilter.changedatasource(this, 'lives_improved')">
+					<li data-panel="lives_improved" class="datafilter active-tab" onclick="objDataFilter.changedatasource('lives_improved')">
 						[lives_improved]
 					</li>
-					<li data-panel="global_presence" class="datafilter" onclick="objDataFilter.changedatasource(this, 'global_presence')">
+					<li data-panel="global_presence" class="datafilter" onclick="objDataFilter.changedatasource('global_presence')">
 						[global_presence]
 						<div class="subtypeindicator">[all_data]</div>
 						<div class="datatype-filter"></div>
 					</li>
-					<li data-panel="sustainability" class="datafilter" onclick="objDataFilter.changedatasource(this, 'sustainability')">
+					<li data-panel="sustainability" class="datafilter" onclick="objDataFilter.changedatasource('sustainability')">
 						[sustainability]
 						<div class="subtypeindicator">[all_data]</div>
 						<div class="datatype-filter"></div>
